refactoring: sidebar and add background image

--- a/css/style.css
+++ b/css/style.css
@@ -80,18 +80,7 @@ main {
     width: var(--ms_sidebar-width);
     height: 100%;
     background-color: var(--ms_bg-sidebar);
-}
-
-.ms_sidebar ul {
-    list-style: none;
-    padding: 0;
-    color: var(--ms_white-color);
-    margin-bottom: 5px;
-}
-
-.ms_sidebar ul button {
-    color: var(--ms_white-color);
-    font-size: 1.5rem;   
+    background-image: url(../img/sidebar-bg.png);
 }
 
 /* Main-Content */
